Mysql changed by Postgresql, implemented first Use Cases

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,14 @@ services:
     networks:
       - backend
 
-  mysql:
-    image: mysql:5.7
+  postgres:
+    image: postgres
     ports:
-      - 3306:3306
+      - 5432:5432
     environment:
-      - MYSQL_ROOT_PASSWORD=toor
-      - MYSQL_DATABASE=teaching
+      - POSTGRES_DB=studentteacher
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=nimda
     networks:
       - backend
 
