--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,19 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/orm-pack": "^1.0",
+        "symfony/yaml": "4.4.*",
+      "ext-json": "*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.15",
         "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
@@ -22,12 +25,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "LaSalle\\StudentTeacher\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "LaSalle\\StudentTeacher\\": "tests/"
         }
     },
     "replace": {
