--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ APP_SECRET=e602191cd02cac5390c21adb572fb429
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=pgsql://admin:nimda@postgres:5432/studentteacher
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=superjwtkey
+###< lexik/jwt-authentication-bundle ###
