--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,11 @@ security:
             id: LaSalle\StudentTeacher\User\Infrastructure\Framework\Provider\CustomUserProvider
     firewalls:
 
+        refresh:
+            pattern:  ^/api/refresh_token
+            stateless: true
+            anonymous: true
+
         login:
             pattern:  ^/api/sign_in
             stateless: true
@@ -22,6 +27,7 @@ security:
 
         api:
             pattern:   ^/api
+            anonymous: true
             stateless: true
             guard:
                 authenticators:
