--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -3,10 +3,9 @@ doctrine:
         url: '%env(resolve:DATABASE_URL)%'
         driver: 'pdo_pgsql'
         charset: utf8
+        types:
+            roles: LaSalle\GroupOne\Logging\Infrastructure\Persistence\Doctrine\Type\RolesType
 
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '5.7'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
