--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,14 +1,20 @@
 fos_rest:
-  #view:
-  #  view_response_listener:  true
-  param_fetcher_listener:  true
-  #allowed_methods_listener:  true
-  #routing_loader:
-  #  default_format:       json
-  #  include_format:       true
+  body_listener: true
+  param_fetcher_listener: force
   format_listener:
+    enabled: true
     rules:
-      - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json ] }
+      - { path: ^/, priorities: [ json ], fallback_format: json, prefer_extension: true }
+  view:
+    view_response_listener: 'force'
+    formats:
+      json: true
+      xml: false
+      rss: false
+    mime_types:
+      json: ['application/json', 'application/x-json']
+  routing_loader:
+    default_format:  json
+    include_format:  false
   exception:
     enabled: true
-
