--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
 
         api:
             pattern:   ^/api
-            anonymous: true
+            anonymous: false
             stateless: true
             guard:
                 authenticators:
