--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -11,9 +11,8 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            LaSalle\StudentTeacher:
+            User:
                 is_bundle: false
-                type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'LaSalle\StudentTeacher\Entity'
-                alias: LaSalle\StudentTeacher
+                type: xml
+                dir: '%kernel.project_dir%/src/User/Infrastructure/Persistence/Doctrine/Mapping'
+                prefix: LaSalle\StudentTeacher\User\Domain
