--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,5 +26,10 @@ services:
     Gesdinet\JWTRefreshTokenBundle\Service\RefreshToken:
         '@gesdinet.jwtrefreshtoken'
 
+    acme_api.event.jwt_created_listener:
+        class: LaSalle\StudentTeacher\User\Infrastructure\Framework\Listener\JWTCreatedListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
