Domain Event implementation (demo)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,5 +31,9 @@ services:
         tags:
             - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
 
+    LaSalle\StudentTeacher\User\Application\Event\SendEmailOnUserCreated:
+      tags:
+        - { name: 'kernel.event_listener', event: LaSalle\StudentTeacher\User\Domain\Event\UserCreatedDomainEvent }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
