--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
+        "symfony/event-dispatcher": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/monolog-bundle": "^3.5",
