--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+      "ext-openssl": "*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.15",
