--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,11 @@ security:
             stateless: true
             anonymous: true
 
+        logout:
+            pattern:  ^/api/log_out
+            stateless: true
+            anonymous: true
+
         login:
             pattern:  ^/api/sign_in
             stateless: true
