--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "ext-openssl": "*",
         "friendsofsymfony/rest-bundle": "^2.7",
         "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
         "lexik/jwt-authentication-bundle": "^2.6",
@@ -20,11 +21,13 @@
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/yaml": "4.4.*",
-      "ext-openssl": "*"
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.3",
         "symfony/maker-bundle": "^1.15",
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
@@ -40,7 +43,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "LaSalle\\StudentTeacher\\": "tests/"
+            "Test\\LaSalle\\StudentTeacher\\": "tests/"
         }
     },
     "replace": {
