--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "friendsofsymfony/rest-bundle": "^2.7",
-        "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
         "lexik/jwt-authentication-bundle": "^2.6",
         "ramsey/uuid": "^4.0",
         "sensio/framework-extra-bundle": "^5.5",
@@ -21,6 +20,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
+        "symfony/validator": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
