--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+      "ext-http": "*"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
