--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-json": "*",
         "ext-openssl": "*",
         "friendsofsymfony/rest-bundle": "^2.7",
+        "lambdish/phunctional": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "ramsey/uuid": "^4.0",
         "sensio/framework-extra-bundle": "^5.5",
@@ -21,8 +22,7 @@
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*",
-      "ext-http": "*"
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
