--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./:/usr/share/nginx/html
+      - ./src/:/usr/share/nginx/html
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - backend
