Docker bug fixing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     ports:
       - 9000:9000
     volumes:
-      - ./:/usr/share/nginx/html
+      - ./src/:/usr/share/nginx/html
     networks:
       - backend
 
