--- a/src/.env
+++ b/src/.env
@@ -12,6 +12,7 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+APP_URL=http://localhost:8080/
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -33,3 +34,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=superjwtkey
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://log.visualization:symfonylasalleproject@smtp.gmail.com
+###< symfony/mailer ###
