--- a/src/config/packages/fos_rest.yaml
+++ b/src/config/packages/fos_rest.yaml
@@ -21,6 +21,7 @@ fos_rest:
     codes:
       LaSalle\StudentTeacher\Shared\Application\Exception\InvalidArgumentValidationException: 400
       LaSalle\StudentTeacher\User\Application\Exception\IncorrectConfirmationTokenException: 403
+      LaSalle\StudentTeacher\User\Application\Exception\ConfirmationTokenNotFoundException: 404
       LaSalle\StudentTeacher\User\Application\Exception\IncorrectPasswordException: 403
       LaSalle\StudentTeacher\User\Application\Exception\UserAlreadyEnabledException: 400
       LaSalle\StudentTeacher\User\Application\Exception\UserAlreadyExistsException: 400
