--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "ext-json": "*",
         "ext-openssl": "*",
+        "craftcamp/php-abac": "^3.0",
         "friendsofsymfony/rest-bundle": "^2.7",
         "lambdish/phunctional": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.6",
@@ -15,6 +16,7 @@
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/event-dispatcher": "4.4.*",
+        "symfony/finder": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/mailer": "4.4.*",
