--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -8,24 +8,20 @@ security:
     firewalls:
 
         refresh:
-            pattern:  ^/api/v1/users/token_refresh
-            stateless: true
+            pattern:  ^/api/v1/users/token_refresh$
             anonymous: true
 
         sign_out:
-            pattern:  ^/api/v1/users/sign_out
-            stateless: true
+            pattern:  ^/api/v1/users/sign_out$
             anonymous: true
 
         sign_in:
-            pattern:  ^/api/v1/users/sign_in
-            stateless: true
+            pattern:  ^/api/v1/users/sign_in$
             anonymous: true
 
-#        sign_up:
- #           pattern:  ^/api/v1/users
-  ##         stateless: true
-    #        anonymous: true
+        sign_up:
+            pattern:  ^/api/v1/users$
+            anonymous: true
 
         api:
             pattern:   ^/api/v1
