--- a/src/config/packages/doctrine.yaml
+++ b/src/config/packages/doctrine.yaml
@@ -8,7 +8,7 @@ doctrine:
       uuid: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\UuidType
       password: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\PasswordType
       email: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\EmailType
-      token: LaSalle\StudentTeacher\Token\Infrastructure\Persistence\Doctrine\Type\TokenType
+      token: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\TokenType
       state: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\StateType
 
   orm:
@@ -21,11 +21,6 @@ doctrine:
         type: xml
         dir: '%kernel.project_dir%/src/User/Infrastructure/Persistence/Doctrine/Mapping'
         prefix: LaSalle\StudentTeacher\User\Domain\Aggregate
-      RefreshToken:
-        is_bundle: false
-        type: xml
-        dir: '%kernel.project_dir%/src/Token/Infrastructure/Persistence/Doctrine/Mapping'
-        prefix: LaSalle\StudentTeacher\Token\Domain\Aggregate
       Resource:
         is_bundle: false
         type: xml
