--- a/src/config/packages/doctrine.yaml
+++ b/src/config/packages/doctrine.yaml
@@ -10,6 +10,7 @@ doctrine:
       email: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\EmailType
       token: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\TokenType
       state: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\StateType
+      status: LaSalle\StudentTeacher\Resource\Infrastructure\Persistence\Doctrine\Type\StatusType
 
   orm:
     auto_generate_proxy_classes: true
