--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -19,11 +19,6 @@ security:
             pattern:  ^/api/v1/users/sign_in
             anonymous: true
 
-        users:
-            pattern:  ^/api/v1/users
-            methods: [GET, POST]
-            anonymous: true
-
         api:
             pattern:   ^/api/v1
             anonymous: false
@@ -32,3 +27,6 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
+
+    access_control:
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
