--- a/src/config/packages/fos_rest.yaml
+++ b/src/config/packages/fos_rest.yaml
@@ -24,6 +24,7 @@ fos_rest:
       LaSalle\StudentTeacher\Resource\Application\Exception\CategoryNotFound: 404
       LaSalle\StudentTeacher\Resource\Application\Exception\CourseNotFoundException: 404
       LaSalle\StudentTeacher\Shared\Application\Exception\PermissionDeniedException: 403
+      LaSalle\StudentTeacher\User\Application\Exception\ConfirmationTokenIsExpiredException: 400
       LaSalle\StudentTeacher\User\Application\Exception\ConfirmationTokenNotFoundException: 404
       LaSalle\StudentTeacher\User\Application\Exception\ConnectionAlreadyExistsException: 400
       LaSalle\StudentTeacher\User\Application\Exception\ConnectionNotFoundException: 404
