--- a/src/.env
+++ b/src/.env
@@ -38,3 +38,7 @@ JWT_PASSPHRASE=superjwtkey
 ###> symfony/mailer ###
 MAILER_DSN=smtp://log.visualization:symfonylasalleproject@smtp.gmail.com
 ###< symfony/mailer ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
