--- a/src/composer.json
+++ b/src/composer.json
@@ -11,6 +11,7 @@
         "friendsofsymfony/rest-bundle": "^2.7",
         "lambdish/phunctional": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.6",
+        "nelmio/cors-bundle": "^2.0",
         "ramsey/uuid": "^4.0",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
