--- a/src/.env
+++ b/src/.env
@@ -13,6 +13,7 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 APP_URL=http://localhost:8080/
+APP_FRONTEND=http://localhost:4200/
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
