bug fix when resource not found (now return 204 instead of 404)

--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -52,6 +52,11 @@ security:
             methods: ['POST']
             anonymous: true
 
+        categories:
+            pattern:  ^/api/v1/categories
+            methods: ['GET']
+            anonymous: true
+
         api:
             pattern:   ^/api/v1
             anonymous: false
