REST input variables style changed

--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -57,6 +57,11 @@ security:
             methods: ['GET']
             anonymous: true
 
+        courses:
+            pattern:  ^/api/v1/courses
+            methods: ['GET']
+            anonymous: true
+
         api:
             pattern:   ^/api/v1
             anonymous: false
