--- a/src/composer.json
+++ b/src/composer.json
@@ -21,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/mailer": "4.4.*",
+        "symfony/messenger": "4.4.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
