--- a/src/config/packages/messenger.yaml
+++ b/src/config/packages/messenger.yaml
@@ -4,3 +4,5 @@ framework:
       async: "%env(MESSENGER_TRANSPORT_DSN)%"
     routing:
       'LaSalle\StudentTeacher\User\Domain\Event\UserCreatedDomainEvent': async
+      'LaSalle\StudentTeacher\User\Domain\Event\EmailConfirmationRequestReceivedDomainEvent': async
+      'LaSalle\StudentTeacher\User\Domain\Event\PasswordResetRequestReceivedDomainEvent': async
