--- a/src/config/services.yaml
+++ b/src/config/services.yaml
@@ -43,3 +43,13 @@ services:
           autoconfigure: false
           tags:
               - { name: messenger.message_handler, handles: LaSalle\StudentTeacher\User\Domain\Event\UserCreatedDomainEvent }
+
+  LaSalle\StudentTeacher\User\Application\Event\SendEmailConfirmationOnEmailConfirmationRequestReceived:
+    autoconfigure: false
+    tags:
+      - { name: messenger.message_handler, handles: LaSalle\StudentTeacher\User\Domain\Event\EmailConfirmationRequestReceivedDomainEvent }
+
+  LaSalle\StudentTeacher\User\Application\Event\SendPasswordResetOnPasswordRequestReceived:
+    autoconfigure: false
+    tags:
+      - { name: messenger.message_handler, handles: LaSalle\StudentTeacher\User\Domain\Event\PasswordResetRequestReceivedDomainEvent }
