--- a/src/composer.json
+++ b/src/composer.json
@@ -27,7 +27,8 @@
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+      "ext-intl": "*"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.3",
