--- a/src/composer.json
+++ b/src/composer.json
@@ -5,9 +5,13 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-openssl": "*",
         "craftcamp/php-abac": "^3.0",
+        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-migrations-bundle": "*",
+        "doctrine/orm": "*",
         "friendsofsymfony/rest-bundle": "^2.7",
         "lambdish/phunctional": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.6",
@@ -18,22 +22,26 @@
         "symfony/dotenv": "4.4.*",
         "symfony/event-dispatcher": "4.4.*",
         "symfony/finder": "4.4.*",
-        "symfony/flex": "^1.3.1",
+        "symfony/flex": "^1.8",
         "symfony/framework-bundle": "4.4.*",
         "symfony/mailer": "4.4.*",
         "symfony/messenger": "4.4.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
+        "symfony/twig-bridge": "4.4.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*",
-      "ext-intl": "*"
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "behat/behat": "^3.7",
+        "behat/mink-browserkit-driver": "^1.3",
         "dama/doctrine-test-bundle": "^6.3",
+        "friends-of-behat/mink-extension": "^2.4",
+        "friends-of-behat/symfony-extension": "2.1.0-BETA.1",
         "symfony/maker-bundle": "^1.15",
-        "symfony/phpunit-bridge": "^5.0",
+        "symfony/phpunit-bridge": "^4.4",
         "symfony/test-pack": "^1.0",
         "symfony/web-server-bundle": "4.4.*"
     },
