new scenarios implemented for functional tests

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -2,7 +2,8 @@
 /.php_cs
 /.php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
-
+/public/avatars/*
+!/public/avatars/.gitkeep
 ###> friends-of-behat/symfony-extension ###
 /behat.yml
 ###< friends-of-behat/symfony-extension ###
