--- a/src/.env
+++ b/src/.env
@@ -50,3 +50,18 @@ CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 # MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_LOGIN=rabbitmq
+RABBITMQ_VHOST=/
+RABBITMQ_PASSWORD=rabbitmq_pass
+RABBITMQ_EXCHANGE=domain_events
+RABBITMQ_MAX_RETRIES=5
+
+DATABASE_DRIVER=pdo_mysql
+DATABASE_HOST=codelytv-php_ddd_skeleton-mooc-mysql
+DATABASE_PORT=3306
+DATABASE_NAME=mooc
+DATABASE_USER=root
+DATABASE_PASSWORD=
