--- a/src/composer.json
+++ b/src/composer.json
@@ -3,6 +3,7 @@
     "license": "proprietary",
     "require": {
         "php": "^7.4",
+        "ext-amqp": "^1.10",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
