implement domain service

--- a/src/config/packages/fos_rest.yaml
+++ b/src/config/packages/fos_rest.yaml
@@ -39,3 +39,5 @@ fos_rest:
       LaSalle\StudentTeacher\User\Application\Exception\UsersAreEqualException: 400
       LaSalle\StudentTeacher\User\Application\Exception\UserNotFoundException: 404
       LaSalle\StudentTeacher\User\Application\Exception\UserNotEnabledException: 403
+      LaSalle\StudentTeacher\Shared\Domain\Exception\InvalidUuidException: 400
+
